Updated docs to reflect the new Approov 2.6 usage for the `approov secret` command.
Signed-off-by: Exadra37 <exadra37@gmail.com>

--- a/docker/production/.env.example
+++ b/docker/production/.env.example
@@ -34,5 +34,5 @@ LIVE_VIEW_DASHBOARD_PASSWORD=___NO_LESS_THEN_12_LENGTH_PASSWORD_HERE___
 
 # APPROOV INTERNAL DEPLOYMENT ONLY: Use the Approov Base64 URL encoded secret
 # assigned for this production example. Ask the engineer team for it.
-# OTHERS: Get the secret with `approov secret /path/to/administration.token -get base64url`
+# OTHERS: Get the secret with `approov secret -get base64url`
 APPROOV_BASE64URL_SECRET=___MUST_BE_BASE64_URL_ENCODED___
