Reviewed the quickstart:
* Upgraded all servers examples to Elixir 1.13.
* Improved READMES for all servers examples:
    + Added websocket request examples with Postman .
    + Improved instruction on how to use the docker stack.
    + Fixed typos, broken links, and redacted some parts to be more readable.
* Reviwed the code in the servers examples and made some small changes and one bug fix.
* Updated the quickstarts with the improved and fixed code.
* Mentioned in the quickstarts the websockets request examples in the README for each server example.
* Update the README in the root of the repo to be more readable and including links for the servers examples and test sections in the quickstarts.

Signed-off-by: Exadra37 <exadra37@gmail.com>

--- a/src/unprotected-server/echo/.env.example
+++ b/src/unprotected-server/echo/.env.example
@@ -6,23 +6,19 @@ URL_PUBLIC_HOST=localhost
 URL_PUBLIC_PORT=8002
 
 # Generate one with:
-#  - mix phx.gen.secret 128
-#  - strings /dev/urandom | grep -o '[[:alpha:]]' | head -n 128 | tr -d '\n'; echo
+#  strings /dev/urandom | grep -o '[[:alpha:]]' | head -n 128 | tr -d '\n'; echo
 SECRET_KEY_BASE=___NO_LESS_THEN_64_LENGTH_SECRET_HERE___
 
 # Generate one with:
-#  - mix phx.gen.secret 256
-#  - strings /dev/urandom | grep -o '[[:alpha:]]' | head -n 256 | tr -d '\n'; echo
+#  strings /dev/urandom | grep -o '[[:alpha:]]' | head -n 256 | tr -d '\n'; echo
 ENCRYPTION_SECRET=___NO_LESS_THEN_64_LENGTH_SECRET_HERE___
 
 # Generate one with:
-#  - mix phx.gen.secret 64
-#  - strings /dev/urandom | grep -o '[[:alpha:]]' | head -n 64 | tr -d '\n'; echo
+#  strings /dev/urandom | grep -o '[[:alpha:]]' | head -n 64 | tr -d '\n'; echo
 PLUG_SESSION_SIGNING_SALT=___NO_LESS_THEN_32_LENGTH_SALT_HERE___
 
 # Generate one with:
-#  - mix phx.gen.secret 64
-#  - strings /dev/urandom | grep -o '[[:alpha:]]' | head -n 64 | tr -d '\n'; echo
+#  strings /dev/urandom | grep -o '[[:alpha:]]' | head -n 64 | tr -d '\n'; echo
 LIVE_VIEW_SIGNING_SALT=___NO_LESS_THEN_32_LENGTH_SALT_HERE___
 
 # Stream logs in real-time at https://example.com/dashboard/request_logger
