Updates for demo.approv.io deployment. Fix default checkout branch. Remove unavailable library from build. Change branch references to "main" to reflect updates to repos. Fix derivation of subdomains from base domain.

--- a/docker/production/.env.example
+++ b/docker/production/.env.example
@@ -1,11 +1,12 @@
 # BUILD RELEASE
-BUILD_RELEASE_FROM=master
+BUILD_RELEASE_FROM=main
 
 # The internal http port used by the docker container to listen on Traefik
 HTTP_INTERNAL_PORT=8002
 
+# Values representing what Traefik will be listening on
 URL_PUBLIC_SCHEME=https
-BASE_URL_PUBLIC_HOST=sub.domain.com
+BASE_URL_PUBLIC_HOST=phoenix-channels.demo.approov.io
 URL_PUBLIC_PORT=443
 
 # Generate one with:
@@ -32,7 +33,6 @@ LIVE_VIEW_SIGNING_SALT=___NO_LESS_THEN_32_LENGTH_SALT_HERE___
 LIVE_VIEW_DASHBOARD_USER=___NO_LESS_THEN_8_LENGTH_USER_NAME_HERE___
 LIVE_VIEW_DASHBOARD_PASSWORD=___NO_LESS_THEN_12_LENGTH_PASSWORD_HERE___
 
-# APPROOV INTERNAL DEPLOYMENT ONLY: Use the Approov Base64 URL encoded secret
-# assigned for this production example. Ask the engineer team for it.
-# OTHERS: Get the secret with `approov secret -get base64url`
+# Get the Approov Base64 URL encoded secret using the Approov CLI:
+#   approov secret -get base64url
 APPROOV_BASE64URL_SECRET=___MUST_BE_BASE64_URL_ENCODED___
