--- a/docker/production/.env.unprotected
+++ b/docker/production/.env.unprotected
@@ -1,1 +1,1 @@
-URL_PUBLIC_HOST=unprotected.sub.domain.com
+URL_PUBLIC_HOST=unprotected.${BASE_URL_PUBLIC_HOST? Missing env var BASE_URL_PUBLIC_HOST}
