--- a/docker/production/.env.approov-token-binding
+++ b/docker/production/.env.approov-token-binding
@@ -1,1 +1,1 @@
-URL_PUBLIC_HOST=token-binding.sub.domain.com
+URL_PUBLIC_HOST=token-binding.${BASE_URL_PUBLIC_HOST? Missing env var BASE_URL_PUBLIC_HOST}
