--- a/src/approov-protected-server/token-check/echo/.env.example
+++ b/src/approov-protected-server/token-check/echo/.env.example
@@ -29,7 +29,6 @@ LIVE_VIEW_SIGNING_SALT=___NO_LESS_THEN_32_LENGTH_SALT_HERE___
 LIVE_VIEW_DASHBOARD_USER=___NO_LESS_THEN_8_LENGTH_USER_NAME_HERE___
 LIVE_VIEW_DASHBOARD_PASSWORD=___NO_LESS_THEN_12_LENGTH_PASSWORD_HERE___
 
-# APPROOV INTERNAL DEPLOYMENT ONLY: Use the Approov Base64 URL encoded secret
-# assigned for this production example. Ask the engineer team for it.
-# OTHERS: Get the secret with `approov secret -get base64url`
+# Get the Approov Base64 URL encoded secret using the Approov CLI:
+#   approov secret -get base64url
 APPROOV_BASE64URL_SECRET=___MUST_BE_BASE64_URL_ENCODED___
